# composite-llm

./: CLAUDE.md  Cargo.toml  README.md  deny.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
examples/: azure.rs  bedrock.rs  openai.rs  streaming.rs  vertex.rs
src/: error.rs  lib.rs
src/backend/: azure.rs  bedrock.rs  mod.rs  openai.rs  vertex.rs
src/convert/: bedrock.rs  mod.rs  vertex.rs
